[package]
name = "openship-nextjs-swc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_core = { version = "0.101.*", features = ["ecma_plugin_transform", "ecma_codegen"] }
swc_common = "*"
swc_ecma_ast = "*"
swc_ecma_parser = "*"
swc_ecma_visit = "*"
rkyv = "*"
