[package]
name = "openship-nextjs-swc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_core = { version = "0.101.*", features = ["ecma_plugin_transform", "ecma_codegen"] }
swc_common = "0.37.5"
swc_ecma_ast = "0.118.2"
swc_ecma_parser = "0.149.1"
swc_ecma_visit = "0.104.8"
